soulignement des séries sémantiques

--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@ p
 	margin-left: 5em;
 	font-family: Geneva;
 }
+.couleur13
+{
+	background-color: yellow;
+}
+.couleur14
+{
+	background-color: pink;
+}
+.couleur15
+{
+	background-color: aqua;
+}
