--- a/style.css
+++ b/style.css
@@ -12,5 +12,13 @@ ul
 #nia
 {
 	font-family: Geneva;
+	font-size: 0.3em;
 	margin-left: 25%;
+	float: left;
+}
+.popup
+{
+	border-style: solid;
+	float: left;
+	padding: 0.5em;
 }
