--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ ul
 }
 #nia
 {
-	font-family: Geneva;
+	font-family: Impact;
+	font-weight: 900;
 	font-size: 0.3em;
 	margin-left: 25%;
 	float: left;
